# Med

./: .env sample  .gitignore  Dockerfile  README.md  doker-compose.yaml  pyproject.toml
addinfo/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
addinfo/migrations/: 0001_initial.py  0002_alter_comtext_options_comtext_contact_name_and_more.py  0002_feedback_feedback_feedback_status.py  0003_comtext_is_active_comtext_map_comtext_mapurl_and_more.py  0003_comtext_is_main.py  0004_comtext_history_comtext_mission_and_more.py
addinfo/templates/addinfo/: comtext_form.html  comtext_list.html  feedback_confirm_delete.html  feedback_detail.html  feedback_form.html  feedback_list.html
config/: settings.py  urls.py
meddata/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
meddata/migrations/: 0001_initial.py  0002_appointment.py  0002_doctor.py  0003_remove_doctor_appointments.py  0004_alter_medbranch_options_alter_medbranch_description_and_more.py  0005_alter_appointment_options_alter_doctor_options_and_more.py  0006_alter_doctor_image.py  0007_alter_doctor_image.py
meddata/templates/meddata/: appointment_confirm_delete.html  appointment_detail.html  appointment_form.html  appointment_list.html  client_appointment_form.html  doctor_confirm_delete.html  doctor_detail.html  doctor_form.html  doctor_list.html  home.html  main.html  (+4 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_user_patronymic_user_surname.py  0003_remove_user_country.py  0004_alter_user_is_staff.py
users/templates/: login.html
(+5 files in other folders)
